VRPanoram container and presentational added. Gallery and Panrama comps added in rotuer and intergrated with Link component.

--- a/src/components/presentationals/Gallery/style.scss
+++ b/src/components/presentationals/Gallery/style.scss
@@ -4,11 +4,16 @@
 
     .image-wrapper {
         display: inline-block;
+        vertical-align: top;
         margin: 20px;
         border: 2px solid #eee;
         
         &:hover {
             cursor: pointer;
+            box-shadow: 1px 1px 5px 0px rgba(204,204,204,1);
+            & p {
+                color: black;
+            }
         }
 
         & img {
