aframe added in the dep graph. sample aframe scene added working.

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,10 @@ html, body, #react-app {
 	height: 100%;
 	font-family: 'sans-serif';
 }
+
+a {
+	text-decoration: none;
+	&:hover, &:focus {
+		text-decoration: none;
+	}
+}
