images from the api not working with aframe,  cauing CORS issue. pano uploaded at the imgur and serverd locally are being rendered.

--- a/src/components/presentationals/Gallery/style.scss
+++ b/src/components/presentationals/Gallery/style.scss
@@ -4,8 +4,8 @@
 
     .image-wrapper {
         display: inline-block;
+        margin: 10px;
         vertical-align: top;
-        margin: 20px;
         border: 2px solid #eee;
         
         &:hover {
@@ -17,8 +17,8 @@
         }
 
         & img {
-            width: 500px;
-            height: auto;
+            width: 400px;
+            height: 200px;
         }
 
         & p {
