--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,10 @@ html, body, #react-app {
 	font-family: 'sans-serif';
 }
 
+* {
+	box-sizing: border-box;
+}
+
 a {
 	text-decoration: none;
 	&:hover, &:focus {
