style adjuseted in gallery component.

--- a/src/components/presentationals/Gallery/style.scss
+++ b/src/components/presentationals/Gallery/style.scss
@@ -1,31 +1,35 @@
 
 .gallery-wrapper {
     user-select: none;
-
+    margin: 0 auto;
+    
     .image-wrapper {
-        display: inline-block;
-        margin: 10px;
-        vertical-align: top;
-        border: 2px solid #eee;
-        
-        &:hover {
-            cursor: pointer;
-            box-shadow: 1px 1px 5px 0px rgba(204,204,204,1);
+        padding: 10px;
+
+        .image {
+            display: inline-block;
+            margin: 5px;
+            vertical-align: top;
+            border: 2px solid #eee;
+            
+            &:hover {
+                cursor: pointer;
+                box-shadow: 1px 1px 5px 0px rgba(204,204,204,1);
+                & p {
+                    color: black;
+                }
+            }
+    
+            & img {
+                width: 400px;
+                height: 200px;
+            }
+    
             & p {
-                color: black;
+                font-size: 22px;
+                color: #777;
+                text-align: center;
             }
         }
-
-        & img {
-            width: 400px;
-            height: 200px;
-        }
-
-        & p {
-            font-size: 22px;
-            color: #777;
-            text-align: center;
-        }
     }
-
 }
